Add link to show cookie consent layer in footer

--- a/wrapper.html
+++ b/wrapper.html
@@ -470,6 +470,7 @@
 					href="{% filter ak_text:"footer_donate_url" %}https://350.org/donate{% endfilter %}">{% filter ak_text:"footer_donate" %}Donate{% endfilter %}</a>
 				/ {% endifequal%}<a id="privacy-link"
 					href="{% filter ak_text:"footer_privacy_url" %}https://350.org/en/privacy{% endfilter %}">{% filter ak_text:"footer_privacy" %}Privacy{% endfilter %}</a>
+				/ <a href="#" onClick="UC_UI.showSecondLayer();">Cookies</a>
 				/ <a
 					href="{% filter ak_text:"footer_contact_url" %}https://350.org/en/contact/{% endfilter %}">{% filter ak_text:"footer_contact" %}Contact{% endfilter %}</a>
 				{% endif %}
