--- a/donate.html
+++ b/donate.html
@@ -46,6 +46,7 @@
     text-align: left !important;
     padding: 0 !important;
     margin: 0 !important;
+    width: 100%;
   }
   #donate {
     margin: 0 !important;
@@ -162,6 +163,8 @@
     #action-lead .section-inner {
       padding: 10px;
       width: 100%;
+      border-bottom-left-radius: 24px;
+      border-bottom-right-radius: 24px;
     }
     .payments-container {
       min-width: 300px !important;
