Update specific page color options

--- a/donate.html
+++ b/donate.html
@@ -1736,6 +1736,9 @@
       #action-lead {
         padding: 9vh 7.5vw;
       }
+      #action-lead .section-inner {
+        padding: 75px 50px;
+      }
     }
     #action-lead .section-inner,  #action-lead .section-inner a,
     #donation-other .section-inner, #donation-other .section-inner a,
