--- a/wrapper.html
+++ b/wrapper.html
@@ -182,9 +182,7 @@
 	TODO: Testing master push
 	-->
 
-	<!-- <link rel='stylesheet' id='baseline-css' href='https://dbqvwi2zcv14h.cloudfront.net/ak/ak-v3.css'
-		type='text/css' media='screen' /> -->
-		<link rel='stylesheet' id='baseline-css' href='	https://xs17wgd2wu.ufs.sh/f/nX6SBdwGAudfp6XNKPsMhjTLE3lAKvfa8sVN2ZIGqcpeuH5r'
+	<link rel='stylesheet' id='baseline-css' href='https://dbqvwi2zcv14h.cloudfront.net/ak/ak-v3.css'
 		type='text/css' media='screen' />
 	<link rel='stylesheet' href='https://dbqvwi2zcv14h.cloudfront.net/ak/custom.css' type='text/css' media='screen' />
 
