--- a/donate.html
+++ b/donate.html
@@ -56,6 +56,8 @@
     flex-direction: row;
     justify-content: center;
     flex-wrap: nowrap;
+    padding: 48px 36px;
+    border-radius: 64px;
   }
   .ak-donate-menu {
     display: flex;
@@ -162,8 +164,7 @@
     #action-lead .section-inner {
       padding: 10px;
       width: 100%;
-      border-bottom-left-radius: 24px;
-      border-bottom-right-radius: 24px;
+      border-radius: 0 0 24px 24px;
     }
     .payments-container {
       min-width: 300px !important;
