--- a/donate.html
+++ b/donate.html
@@ -1701,7 +1701,8 @@
 </style>
 
 <!-- New styles for more accessible donate pages -->
-{% if page.custom_fields.page_background_color == 'new_accessible' or page.custom_fields.page_background_color == 'new_accessible_desktop' %}
+{% if page.custom_fields.page_background_color in ['new_accessible', 'new_accessible_desktop'] 
+      or page.custom_fields.after_action_next_step == 'flow' %}  
   <style>
     #body-mobile-background {
       opacity: 1;
