--- a/donate.html
+++ b/donate.html
@@ -1701,8 +1701,13 @@
 </style>
 
 <!-- New styles for more accessible donate pages -->
-{% if page.custom_fields.page_background_color in ['new_accessible', 'new_accessible_desktop'] 
-      or page.custom_fields.after_action_next_step == 'flow' %}  
+{% if page.custom_fields.page_background_color in [
+  'new_accessible',
+  'new_accessible_desktop',
+  'bg-blue_opaque',
+  'bg-white_opaque',
+  'bg-dkgray_opaque'
+] %}
   <style>
     #body-mobile-background {
       opacity: 1;
