Refactor correct classnames

--- a/donate.html
+++ b/donate.html
@@ -1704,9 +1704,9 @@
 {% if page.custom_fields.page_background_color in [
   'new_accessible',
   'new_accessible_desktop',
-  'bg-blue_opaque',
-  'bg-white_opaque',
-  'bg-dkgray_opaque'
+  'blue_opaque',
+  'white_opaque',
+  'dkgray_opaque'
 ] %}
   <style>
     #body-mobile-background {
