Refactor conditional for background styles

--- a/donate.html
+++ b/donate.html
@@ -1701,13 +1701,11 @@
 </style>
 
 <!-- New styles for more accessible donate pages -->
-{% if page.custom_fields.page_background_color in [
-  'new_accessible',
-  'new_accessible_desktop',
-  'blue_opaque',
-  'white_opaque',
-  'dkgray_opaque'
-] %}
+{% if page.custom_fields.page_background_color == 'new_accessible'
+      or page.custom_fields.page_background_color == 'new_accessible_desktop'
+      or page.custom_fields.page_background_color == 'blue_opaque'
+      or page.custom_fields.page_background_color == 'white_opaque'
+      or page.custom_fields.page_background_color == 'dkgray_opaque' %}
   <style>
     #body-mobile-background {
       opacity: 1;
