--- a/donate.html
+++ b/donate.html
@@ -1701,11 +1701,7 @@
 </style>
 
 <!-- New styles for more accessible donate pages -->
-{% if page.custom_fields.page_background_color == 'new_accessible'
-      or page.custom_fields.page_background_color == 'new_accessible_desktop'
-      or page.custom_fields.page_background_color == 'blue_opaque'
-      or page.custom_fields.page_background_color == 'white_opaque'
-      or page.custom_fields.page_background_color == 'dkgray_opaque' %}
+{% if page.custom_fields.page_background_color == 'new_accessible' or page.custom_fields.page_background_color == 'new_accessible_desktop' or page.custom_fields.page_background_color == 'blue_opaque' or page.custom_fields.page_background_color == 'white_opaque' or page.custom_fields.page_background_color == 'dkgray_opaque' %}
   <style>
     #body-mobile-background {
       opacity: 1;
