--- a/wrapper.html
+++ b/wrapper.html
@@ -470,7 +470,11 @@
 					href="{% filter ak_text:"footer_donate_url" %}https://350.org/donate{% endfilter %}">{% filter ak_text:"footer_donate" %}Donate{% endfilter %}</a>
 				/ {% endifequal%}<a id="privacy-link"
 					href="{% filter ak_text:"footer_privacy_url" %}https://350.org/en/privacy{% endfilter %}">{% filter ak_text:"footer_privacy" %}Privacy{% endfilter %}</a>
-				/ <a href="#" onClick="UC_UI.showSecondLayer();">Cookies</a>
+				/ {% if geoip.is_gdpr_country %}
+					<a href="#" onClick="UC_UI.showSecondLayer();">Cookies</a>
+					{% else %} 
+					<a href="https://www.350.org/cookies">Cookies</a>
+				{% endif %} 
 				/ <a
 					href="{% filter ak_text:"footer_contact_url" %}https://350.org/en/contact/{% endfilter %}">{% filter ak_text:"footer_contact" %}Contact{% endfilter %}</a>
 				{% endif %}
