--- a/donate.html
+++ b/donate.html
@@ -151,12 +151,57 @@
     background-color: #144872 !important;
   }
 
+  .bg-blue_opaque-fade   .section-inner { background-color: #0F81E9; color: #fff; }
+  .bg-white_opaque-fade  .section-inner { background-color: #ffffff; color: #144872; }
+  .bg-dkgray_opaque-fade .section-inner { background-color: #172429; color: #fff; }
+
+  [class$="_opaque-fade"] .section-inner {
+    padding: 48px 36px;
+    border-radius: 64px;
+    max-width: 1133px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  [class$="_opaque-fade"] .section-inner #action-header {
+    max-width: 520px;
+    padding:   0 24px;
+    width: 100%;
+  }
+
+  [class$="_opaque-fade"] .section-inner #action-form {
+    margin: auto;
+  }
+
+  [class$="_opaque-fade"] .section-inner p {
+    font-family: Klima, -apple-system, BlinkMacSystemFont, Arial, sans-serif;
+  }
+
+  [class$="_opaque-fade"] .section-inner .highlight {
+    border-radius: 8px;
+    background:    #144872;
+    height:        52px;
+    padding:       12px;
+    gap:           10px;
+    color:         #fff;
+    font-size:     24px;
+    font-weight:   600;
+    line-height:   normal;
+  }
+
+  [class$="_opaque-fade"] .section-inner #action-title {
+    margin-top:  25px;
+    font-size:   58px;
+    font-weight: 400;
+    line-height: normal;
+  }
+
   /* Tablet Styles */
   @media screen and (max-width:900px) {
     #jump-to-form {
       display: none;
     }
-    #action-lead[class$="_opaque-fade"] {
+    .Donation #action-lead[class$="_opaque-fade"] {
       padding: 16px;
     }
 
@@ -195,27 +240,27 @@
     #body-mobile-background.bg-blue_opaque,
     #body-mobile-background.bg-white_opaque,
     #body-mobile-background.bg-dkgray_opaque {
-        height: 443px;
-        width: calc(100% - 32px);
-        left: 16px;
-        border-radius: 24px;
-        position: absolute;
-        top: 16px;
-        z-index: 10;
-      }
+      height: 443px;
+      width: calc(100% - 32px);
+      left: 16px;
+      border-radius: 24px;
+      position: absolute;
+      top: 16px;
+      z-index: 10;
+    }
 
-        .body-blue_opaque {
-        background: #0F81E9;
-      }
+    .body-blue_opaque {
+      background: #0F81E9;
+    }
 
-        .body-white_opaque {
-        background: #ffffff;
-      }
+    .body-white_opaque {
+      background: #ffffff;
+    }
 
-        .body-dkgray_opaque {
-        background: #172429;
-      }
-      #action-after-header {
+    .body-dkgray_opaque {
+      background: #172429;
+    }
+    #action-after-header {
       padding: 4rem;
     }
 
