Add darkgray pill color

--- a/donate.html
+++ b/donate.html
@@ -194,7 +194,9 @@
     font-weight: 400;
     line-height: normal;
   }
-
+  .bg-dkgray_opaque-fade .section-inner .highlight {
+    background: rgba(255, 255, 255, 0.10);
+  }
   /* Tablet Styles */
   @media screen and (max-width:900px) {
     #jump-to-form {
