--- a/afteraction-share.html
+++ b/afteraction-share.html
@@ -263,7 +263,7 @@ Custom template for same-page post-AJAX submit share ask.
 
 {% if page.custom_fields.after_action_next_step == "flow" %}
 <div id="afteraction-flow" style="visibility: hidden; left: -999px; position: absolute; height: 0; width: 0;">
-	<iframe id="donate-iframe" style="height: 110vh; width: 100vw;"></iframe>
+	<iframe id="donate-iframe" style="height: 110vh; width: 100vw;" src="https://act.350.org/donate/test_wtr_donate_afteractionflow"></iframe>
 </div>
 
 <div id="afteraction-flow-share" style="display: none; height: 100vh; width: 100%; position: absolute; top: 0">
@@ -508,8 +508,8 @@ Custom template for same-page post-AJAX submit share ask.
 			const iframe = document.getElementById('donate-iframe');
 			const pageId = '{{ page.id }}';
 			const donateSourceCode = `aa_${pageId}_thanksflow`;
-			const donatePageEmbedURL = '{{ page.custom_fields.afteraction_donate_alternate_url }}' || 'https://act.350.org/donate/build';
-			iframe.src = `${donatePageEmbedURL}?source=${donateSourceCode}`;
+			//const donatePageEmbedURL = '{{ page.custom_fields.afteraction_donate_alternate_url }}' || 'https://act.350.org/donate/build';
+			//iframe.src = `${donatePageEmbedURL}?source=${donateSourceCode}`;
 			if ($(window).width() > 600) {
 				$('#donate-iframe')[0].setAttribute('scrolling', 'no')
 			}
