--- a/thanks.html
+++ b/thanks.html
@@ -204,6 +204,11 @@
 		}
 	</style>
 {% include "./afteraction-flow-share.html" %}
+<script>
+	jQuery(document).ready(function($){
+		$('#afteraction-flow-share').show();
+	});
+</script>
 {% endif %}
 	<section id="thanks" class="section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
 		<div class="section-inner">
