--- a/afteraction-flow-share.html
+++ b/afteraction-flow-share.html
@@ -33,12 +33,12 @@
 				<a href='/share/link?type=ot&short=1' class="bg-orange copy-link-share copy-link button button-large">{% filter ak_text:"general_share_link_copy_button" %}Copy Link{% endfilter %}</a>
 				<div class="share-buttons-container margin-top-large">
 					<div class="afteraction-facebook-share-intro afteraction-share-option-intro margin-bottom-medium">
-						<a class="afteraction-share-button fb-share button-icon bg-facebook-color bg-facebook-icon button-share-facebook" href="/share/link?type=fb&amp;page_name={{page.name}}&short=1&source=share-ak-thanksflow-fb">
+						<a class="afteraction-share-button fb-share button-icon bg-facebook-color bg-facebook-icon button-share-facebook" href="/share/link?type=fb&amp;page_name={{page.name}}&short=1&source=share-ak-thanksflow-fb&action_id={{action.id}}">
 						</a>
 						<span class="text-small">Facebook</span>
 					</div>
 					<div class="afteraction-email-share-intro afteraction-share-option-intro margin-bottom-medium">
-						<a class="afteraction-share-button email-share button-icon bg-email-color bg-email-icon button-share-email" href="/share/link?type=ot&page_name={{page.name}}&short=1">
+						<a class="afteraction-share-button email-share button-icon bg-email-color bg-email-icon button-share-email" href="/share/link?type=ot&page_name={{page.name}}&short=1&action_id={{action.id}}">
 						</a>
 						<span class="text-small">Email</span>
 					</div>
@@ -48,7 +48,7 @@
 						<span class="text-small">Whatsapp</span>
 					</div>
 					<div class="afteraction-bluesky-share-intro afteraction-share-option-intro margin-bottom-medium">
-						<a class="afteraction-share-bluesky bluesky-share button-icon bg-bluesky-color bg-bluesky-icon button-share-bluesky" href="/share/link?type=ot&bluesky=true&page_name={{page.name}}&short=1">
+						<a class="afteraction-share-bluesky bluesky-share button-icon bg-bluesky-color bg-bluesky-icon button-share-bluesky" href="/share/link?type=ot&bluesky=true&page_name={{page.name}}&short=1&action_id={{action.id}}">
 						</a>
 						<span class="text-small">Bluesky</span>
 					</div>
@@ -282,6 +282,41 @@
         // send google analytics event
         gtag('event', 'scrolling-signup', {'click_id': 'thanksflow_share_fb'});
       }
+    });
+
+    $('.whatsapp-share').on('click', function(e) {
+      e.preventDefault();
+      // Set Whatsapp Share URL based on response from API
+      var currShareURL = new URL(e.target.href);
+      var getShareURL = '/share/link?type=ot&action_id={{action.id}}&short=1&page_name={{page.name}}';
+      var actionID = currShareURL.searchParams.get('action_id');
+      {% if page.custom_fields.after_action_next_step == "flow" %}
+        if (typeof gtag !== 'undefined') {
+          // send google analytics event
+          gtag('event', 'scrolling-signup', {'click_id': 'thanksflow_share_wa'});
+        }
+      {% endif %}
+      if (actionID) {
+        getShareURL = '/share/link?type=ot&short=1&page_name={{page.name}}&source=share-ak-thanksflow-wa' + '&action_id=' + actionID;
+      }
+      $.ajax({
+        method: 'GET',
+        url: getShareURL,
+      }).done(function(shareURL) {
+        var newURL = 'https://api.whatsapp.com/send?text=' + whatsappMsg + shareURL;
+        $(e.target).attr('href', newURL);
+        var win = window.open(newURL);
+        if (win) {
+          win.focus();
+        }
+        show_tick(1);
+      }).fail(function () {
+        var whatsappShareURL = 'https://api.whatsapp.com/send?text=' + whatsappMsg + window.location.href;
+        var win = window.open(whatsappShareURL);
+        if (win) {
+          win.focus();
+        }
+      });
     });
   });
 </script>
