--- a/afteraction-flow-share.html
+++ b/afteraction-flow-share.html
@@ -191,6 +191,12 @@
 
 <script>
   jQuery(document).ready(function($){
+    {% if page.custom_fields.share_whatsapp_message %}
+		var whatsappMsg = '{{ page.custom_fields.share_whatsapp_message|escapejs }} ';
+    {% else %}
+      var whatsappMsg = '{{ page.followup.share_title_value|escapejs }} ';
+    {% endif %}
+
     $('.email-share').on('click', function(e) {
       e.preventDefault();
       if (typeof gtag !== 'undefined') {
@@ -290,12 +296,10 @@
       var currShareURL = new URL(e.target.href);
       var getShareURL = '/share/link?type=ot&action_id={{action.id}}&short=1&page_name={{page.name}}';
       var actionID = currShareURL.searchParams.get('action_id');
-      {% if page.custom_fields.after_action_next_step == "flow" %}
-        if (typeof gtag !== 'undefined') {
-          // send google analytics event
-          gtag('event', 'scrolling-signup', {'click_id': 'thanksflow_share_wa'});
-        }
-      {% endif %}
+      if (typeof gtag !== 'undefined') {
+        // send google analytics event
+        gtag('event', 'scrolling-signup', {'click_id': 'thanksflow_share_wa'});
+      }
       if (actionID) {
         getShareURL = '/share/link?type=ot&short=1&page_name={{page.name}}&source=share-ak-thanksflow-wa' + '&action_id=' + actionID;
       }
