--- a/thanks.html
+++ b/thanks.html
@@ -209,6 +209,7 @@
 		$('#afteraction-flow-share').show();
     var currentUrl = new URL(window.location.href);
     var actionID = currentUrl.searchParams.get('action_id');
+		var akid = currentUrl.searchParams.get('akid');
 
 		if (typeof gtag !== 'undefined') {
 			// send google analytics event
