Add show tick for all share functions

--- a/afteraction-flow-share.html
+++ b/afteraction-flow-share.html
@@ -290,6 +290,7 @@
         // send google analytics event
         gtag('event', 'scrolling-signup', {'click_id': 'thanksflow_share_fb'});
       }
+      show_tick(1);
     });
 
     $('.whatsapp-share').on('click', function(e) {
