--- a/donate.html
+++ b/donate.html
@@ -231,6 +231,9 @@
         class="tablet-hide desktop-hide mobile-hide bg-orange text-underline-none text-center arrow-down text-large2">{% if page.custom_fields.form_submit_button_text %}{{ page.custom_fields.form_submit_button_text }}{% else %}{% filter ak_text:"donate_submit_button" %}Donate{% endfilter %}{% endif %}</a>
       <input type="hidden" name="page" value="{{ page.name }}">
       <input type="hidden" name="orig_akid" value="{{ akid }}">
+      {% if page.custom_fields.after_action_next_step == "flow" %}
+      <input id="actionid_origin_page" type="hidden" name=actionid_origin_page value="">
+      {% endif %}
       <div id="action-header"
         class="{% if page.custom_fields.page_layout_style == 'expanded' or page.custom_fields.after_action_next_step == 'flow' %}c10{% else %}c5{% endif %} ct10 cm10 c-wide">
         {% if page.custom_fields.page_pretitle %}
@@ -1831,6 +1834,7 @@
         $('.actionFirstName').text(data.firstName);
         $('#id_email').val(data.email);
         $('#id_first_name').val(data.firstName);
+        $('#actionid_origin_page').val(data.actionID);
         if (data.lastName) {
           $('#id_last_name').val(data.lastName);
         }
