Update naming of action custom field

--- a/donate.html
+++ b/donate.html
@@ -232,7 +232,7 @@
       <input type="hidden" name="page" value="{{ page.name }}">
       <input type="hidden" name="orig_akid" value="{{ akid }}">
       {% if page.custom_fields.after_action_next_step == "flow" %}
-      <input id="actionid_origin_page" type="hidden" name=actionid_origin_page value="">
+      <input id="action_original_actionid" type="hidden" name=action_original_actionid value="">
       {% endif %}
       <div id="action-header"
         class="{% if page.custom_fields.page_layout_style == 'expanded' or page.custom_fields.after_action_next_step == 'flow' %}c10{% else %}c5{% endif %} ct10 cm10 c-wide">
@@ -1834,7 +1834,7 @@
         $('.actionFirstName').text(data.firstName);
         $('#id_email').val(data.email);
         $('#id_first_name').val(data.firstName);
-        $('#actionid_origin_page').val(data.actionID);
+        $('#action_original_actionid').val(data.actionID);
         if (data.lastName) {
           $('#id_last_name').val(data.lastName);
         }
