--- a/thanks.html
+++ b/thanks.html
@@ -209,7 +209,7 @@
 		$('.afteraction-share-title').text('{% filter ak_text:"flow_share_step_thanks_donating" %}Thanks for your donation!{% endfilter %}');
 		$('#afteraction-flow-share').show();
     var currentUrl = new URL(window.location.href);
-    var actionID = '{{ action.custom_fields.actionid_origin_page }}';
+    var actionID = '{{ action.custom_fields.original_actionid }}';
 		var akid = currentUrl.searchParams.get('akid');
 
 		if (typeof gtag !== 'undefined') {
