--- a/afteraction-share.html
+++ b/afteraction-share.html
@@ -753,7 +753,8 @@ jQuery(document).ready(function($){
 						lastName: lastName,
 						email: email,
 						city: city,
-						actionID: actionID
+						actionID: actionID,
+						pageName: '{{ page.name }}'
 					}
 					const iframe = document.getElementById("donate-iframe");
 					iframe.setAttribute("sandbox", "allow-scripts allow-top-navigation allow-same-origin allow-forms");
