update mobile styles

--- a/thanks.html
+++ b/thanks.html
@@ -206,6 +206,9 @@
 			#site-footer {
 				display: none;
 			}
+			.donate-lead.action-lead {
+				align-items: baseline;
+			}
 
 			:is(.Signup, .Petition, .Letter, .Donation) #body-mobile-background.bg-blue_opaque,
 			:is(.Signup, .Petition, .Letter, .Donation) #body-mobile-background.bg-white_opaque,
