update mobile styles

--- a/thanks.html
+++ b/thanks.html
@@ -209,7 +209,11 @@
 			.donate-lead.action-lead {
 				align-items: baseline;
 			}
-
+			#afteraction-flow-share .section-inner {
+				width: 100%;
+				align-items: center;
+				justify-content: center;
+			}
 			:is(.Signup, .Petition, .Letter, .Donation) #body-mobile-background.bg-blue_opaque,
 			:is(.Signup, .Petition, .Letter, .Donation) #body-mobile-background.bg-white_opaque,
 			:is(.Signup, .Petition, .Letter, .Donation) #body-mobile-background.bg-dkgray_opaque {
@@ -221,15 +225,12 @@
 				top: 16px;
 				z-index: 10;
 			}
-
 			body:is(.Signup, .Petition, .Letter, .Donation).body-blue_opaque {
 				background: #0F81E9;
 			}
-
 			body:is(.Signup, .Petition, .Letter, .Donation).body-white_opaque {
 				background: #ffffff;
 			}
-
 			body:is(.Signup, .Petition, .Letter, .Donation).body-dkgray_opaque {
 				background: #172429;
 			}
