Update custom field for donate taking action copy

--- a/afteraction-flow-share.html
+++ b/afteraction-flow-share.html
@@ -22,7 +22,7 @@
 					class="highlight bg-dkgray-trans">{% filter ak_text:"flow_share_step_pre_header" %}Complete your support{% endfilter %}</span></p>
 				<h2 id="action-title" class="title3 text-style-title3">
 					<span class="afteraction-share-title {{ page.custom_fields.page_title_style }}">
-            {% filter ak_text:"flow_donate_step_thanks_taking_action" %}Thanks for taking action,{% endfilter %} <span class="actionFirstName">friend</span>!
+						{% include_tmpl page.custom_fields.flow_donate_step_thanks_taking_action %}
           </span>
 				</h2>
 				<div class="afteraction-share-ask-text margin-bottom-huge">
